--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,9 @@
     "test",
     "tests"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "normalize-scss": "~3.0.3",
+    "q-lists": "~0.0.0",
+    "silent-clearfix": "*"
+  }
 }
